# gptfdisk

./: .gitignore  CMakeLists.txt  config.h.in  gptcurses.cc  meson.build
